feat/fix: fix firebase bug, make tests
