# src/modules/Profile/useCases/ConfigurationProfile/ConfigurationProfileController.ts
@@ -3,11 +3,22 @@ import { Request, Response } from 'express';
 import { container } from 'tsyringe';
 import { ConfigurationProfile } from './ConfigurationProfileUseCase';
 
+interface UpdatedOutput {
+   id: string;
+   profession: string | null;
+   salary: any;
+   phonenumber: string | null;
+   dateOfBirth: string | null;
+}
+
 export class ConfigurationProfileController {
-   async handle(req: Request, res: Response): Promise<HTTPRequest<any>> {
+   async handle(
+      req: Request,
+      res: Response
+   ): Promise<HTTPRequest<undefined | UpdatedOutput>> {
       const avatar = req.file;
       const data = req.body;
-      const { id: user_id } = req.client;
+      const { id: user_id, profileId } = req.client;
 
       const useCase = container.resolve(ConfigurationProfile);
 
@@ -23,11 +34,11 @@ export class ConfigurationProfileController {
          },
       };
 
-      if (data.update === true && data.profile_id) {
-         const updatedProfile = await useCase.execute({
+      if (data.update === true && profileId) {
+         await useCase.execute({
             ...paramsRequest,
             update: data.update,
-            profile_id: data.profile_id,
+            profile_id: profileId,
          });
 
          return {
@@ -37,7 +48,7 @@ export class ConfigurationProfileController {
          };
       }
 
-      const createProfile = await useCase.execute({
+      await useCase.execute({
          ...paramsRequest,
          profile_id: undefined,
          update: data.update,
