# src/shared/routes/userRoutes.ts
@@ -7,6 +7,7 @@ import { DeleteUserController } from '@/modules/users/useCases/DeleteUser/Delete
 import { UpdatedUserController } from '@/modules/users/useCases/UpdatedUser/UpdatedUserController';
 import { ConfigurationProfileController } from '@/modules/Profile/useCases/ConfigurationProfile/ConfigurationProfileController';
 import { setUpdateField } from '../infra/middleware/UpdatedField';
+import { GerProfileController } from '@/modules/Profile/useCases/GetProfileConfig/GetProfileController';
 
 const userRouter = Router();
 
@@ -16,7 +17,6 @@ const createUserController = new CreateUserController();
 const listUserController = new ListUserController();
 const deleteUserController = new DeleteUserController();
 const updatedUserController = new UpdatedUserController();
-const configurationProfileController = new ConfigurationProfileController();
 
 userRouter.get('/', UserAuthentication, listUserController.handle);
 userRouter.post('/create', createUserController.handle);
@@ -24,6 +24,8 @@ userRouter.put('/updated', UserAuthentication, updatedUserController.handle);
 userRouter.delete('/:pass', UserAuthentication, deleteUserController.handle);
 
 /* Profile */
+const configurationProfileController = new ConfigurationProfileController();
+const getProfileController = new GerProfileController();
 
 userRouter.patch(
    '/avatar',
@@ -57,5 +59,10 @@ userRouter.patch(
       return res.status(statusCode)[type](body);
    }
 );
+
+userRouter.get('/profile', UserAuthentication, async (req, res) => {
+   const { body, statusCode, type } = await getProfileController.handle(req);
+   return res.status(statusCode)[type](body);
+});
 
 export { userRouter };
